--- a/4_BOX_MODEL/2_padding_margin/style.css
+++ b/4_BOX_MODEL/2_padding_margin/style.css
@@ -1,3 +1,8 @@
+* {
+margin: 0;
+}
+
+
 div {
   border: 4px dotted #00f;  
   width: fit-content;
@@ -11,7 +16,25 @@ padding: 20px 50px 5px;
 
 padding: 30px 50px 70px 90px;
 
-
 padding-inline: 40px;
 padding-block: 20px;
+}
+
+h1 {
+  border: 1px solid red;
+  margin-bottom: 20px;
+
+}
+
+.algum {
+  margin-bottom: 100px;
+}
+
+
+.ultimo {
+  margin-top: 50px;
+}
+
+.outro {
+  margin-inline: auto;
 }
